src/scss/components/code.scss
// Single code, default style
code {
  background-color: transparent;
  border: 1px $text-color solid;
  border-radius: 5px;
  color: $text-color;
  font-size: 90%;
  padding: 1px 5px;
  white-space: nowrap;

  // Single code, filled style
  &.filled {
    background-color: $text-color;
    color: $meshki-black;
  }
}

// pre is used for a block of code
pre {
  background-color: transparent;
  border: 2px $text-color solid;
  border-radius: 5px;
  color: $text-color;
  overflow-x: auto;
  white-space: normal;

  // Filled mode for blocks of code
  &.filled {
    background-color: $text-color;
    color: $meshki-black;

    // If the code is the immediate child of pre with filled mode
    & > code {
      background-color: $text-color;
      color: $meshki-black;
    }
  }
}

// If the code is the immediate child of pre
pre > code {
  border: 0;
  display: inline;
  left: 20px;
  overflow: auto;
  position: relative;
  white-space: pre;

  & > span {
    padding-right: 20px;
  }
}

